#371 issue explore countries, fix truncate reference when larger than 2 lines

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -366,75 +366,50 @@ h1 + .lead {
 ==============================================================================
 */
 
+p {
+    font-family: Arial;
+    color: #234F5C;
+}
 
-
-/*
 .trunkate {
+    background: transparent;
+    display: block;
+    /* Fallback for non-webkit */
     display: -webkit-box;
+    max-height: 3.38rem;
+    /* Fallback for non-webkit */
+    font-size: 1.3rem;
+    line-height: 1.3;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    width:100%;
-    overflow:hidden;
-    min-height: 50px;
-
-}
-*/
-
-.trunkate {
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
-    /*-moz-binding: url('ellipsis.xml#ellipsis');*/
-    display: inline-flex;
-    display: -webkit-box;
-    /*height: 30px;*/
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    /*width: 250px;*/
-
-    /*height: 50px;*/
-
-
+    margin-bottom: 0;
 }
-
-/*.trunkate {*/
-    /*position: relative;*/
-    /*height: 50px;*/
-    /*overflow: hidden;*/
-/*}*/
-
-/*.trunkate */
-/*{*/
-    /*content: "...";*/
-    /*text-align: right;*/
-    /*!*position: absolute;*!*/
-    /*bottom: 0;*/
-    /*right: 0;*/
-    /*width: 50%;*/
-    /*height: 1.2em;*/
-    /*max-height: 50px;*/
-    /*!*   background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 80%); *!*/
-/*}*/
-
-/*!* Now add in code for the browsers that support -webkit-line-clamp and overwrite the non-supportive stuff *!*/
-/*@supports (-webkit-line-clamp: 2) {*/
-    /*.trunkate {*/
-        /*overflow: hidden;*/
-        /*text-overflow: ellipsis;*/
-        /*display: -webkit-box;*/
-        /*-webkit-line-clamp: 2;*/
-        /*-webkit-box-orient: vertical;*/
-    /*}*/
-
-    /*.trunkate:after {*/
-        /*display: none;*/
-    /*}*/
-/*}*/
-
-
-
+@-moz-document url-prefix() {
+    .trunkate {
+        overflow: hidden;
+        position: relative;
+    }
+    .trunkate:before {
+        background: transparent;
+        bottom: 0;
+        position: absolute;
+        right: 0;
+        float: right;
+        content: '\2026';
+        margin-left: -3rem;
+        width: 3rem;
+    }
+    .trunkate:after {
+        content: '';
+        background: transparent;
+        position: absolute;
+        height: 50px;
+        width: 100%;
+        z-index: 1;
+    }
+}
 
 /*
 ==============================================================================
